--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ p {
    margin: .5em 0;
 }
 
-h1, h3 + p {
+h1 + p, h3 + p {
    color: purple;
    font-family: sans-serif;
    font-weight: bold;
